--- a/pages/development/javascript.textile
+++ b/pages/development/javascript.textile
@@ -158,29 +158,35 @@ bc. xhr.onreadystatechange = function() {
 }
 
 h3(#6). Json - JavaScript Object Notation
+<hr />
 
 * *(#6_1)Json 对象*
+<hr />
 
-bc. var user = {
+<pre class="brush: javascript">var user = {
     'username' : 'admin',
     'password' : 'admin'
 };
-var username    = user.username;
+var username = user.username;
+</pre>
 
 * *(#6_2)Json 数组*
+<hr />
 
-bc. var users = [
+<pre class="brush: javascript">var users = [
     {'username' : 'admin', 'password' : 'admin'},
     {'username' : 'root', 'password' : 'root'},
     {'username' : 'guest', 'password' : 'guest'}
 ];
 var length      = users.length;
-var user        = users[0];
+var user        = users[ 0];
 var username    = user.username;
+</pre>
 
 * *(#6_3)Json 复合*
+<hr />
 
-bc. var users = {
+<pre class="brush: javascript">var users = {
     'address' : [
         {'address' : 'bj'},
         {'address' : 'gz'}
@@ -190,21 +196,97 @@ bc. var users = {
         {'tel' : {'hometel' : '120', 'moblie' : '112'}}
     ]
 };
-var address = users.address[0].address;
-var hometel = users.tels[0].tel.hometel;
+var address = users.address[ 0].address;
+var hometel = users.tels[ 0].tel.hometel;
+</pre>
 
 * *(#6_4)eval 函数*
+<hr />
 
-bc. var json = eval('(' + xhr.responseText + ')');
+<pre class="brush: javascript">
+var json = eval('(' + xhr.responseText + ')');
 ==>
 var json = eval("({'username' : 'admin', 'password' : 'admin'})");
 var username = json.username;
+</pre>
 
 * *(#6_5)Java -> Json* - 使用json_lib这个工具包把一个Java对象转换成json串
+<hr />
 
-bc. // 转换对象
+<pre class="brush: javascript">
+// 转换对象
 JSONObject.fromObject(Object).toString();
 // 转换数组
 JSONArray.fromObject(List<Object>).toString();
 // 过滤
 JSONArray.fromObject(List<Object>, new JsonConfig().setE(new String[]{"id"})).toString();
+</pre>
+
+h3(#7). 面向对象
+<hr />
+
+* *对象*
+<hr />
+
+<pre class="brush: javascript">
+var emptyObject1 = {};           //创建空对象
+var emptyObject2 = new Object(); //创建空对象
+var person = {"name":"sdcyst",
+          "age":18,
+          "sex":"male"};     //创建一个包含初始值的对象person
+alert(person.name);              //sdcyst
+alert(person["age"]);            //18
+</pre>
+
+<pre class="brush: javascript">
+var person = {};
+person.name = "sdcyst";
+person["age"] = 18;
+alert(person.name + "__" + person.age); //sdcyst__18
+//在构建一个对象时,属性的名字可以不用引号来标注(name)
+var _person = {name:"balala","age":23}; 
+//但是仍旧是一个字符串类型.在访问的时候[]内仍旧需要引号
+alert(_person["name"] + "__" + person.age); //balala__23
+alert(_person[name]);                   //undefinied
+</pre>
+
+<pre class="brush: javascript">
+var name = {"name1":"NAME1","name2":"NAME2","name3":"NAME3","name4":"NAME4"};
+var namestring = "";
+for(var props in name) {  //循环name对象中的属性名字
+    namestring += name[props];
+}
+alert(namestring);  //NAME1NAME2NAME3NAME4
+
+namestring = "";
+for(var i=0; i<4; i++) {
+    namestring += name["name"+(i+1)];
+}
+alert(namestring);  //NAME1NAME2NAME3NAME4
+</pre>
+
+<pre class="brush: javascript">
+var name = {"name1":"NAME1","name2":"NAME2","name3":"NAME3","name4":"NAME4"};
+var namestring = "";
+for(var props in name) {  //循环name对象中的属性名字
+    namestring += name[props];
+}
+alert(namestring);  //NAME1NAME2NAME3NAME4
+
+delete name.name1;  //删除name1属性
+delete name["name3"];  //删除name3属性
+namestring = "";
+for(var props in name) {  //循环name对象中的属性名字
+    namestring += name[props];
+}
+alert(namestring);  //NAME2NAME4
+
+alert("name1" in name); //false
+alert("name4" in name); //true
+</pre>
+<pre class="brush: javascript">
+var date = new Date();
+alert(date.constructor);  //Date
+alert(date.constructor == "Date");  //false
+alert(date.constructor == Date);  //true
+</pre>
