--- a/_posts/2011-12-26-create-blogs-on-github.textile
+++ b/_posts/2011-12-26-create-blogs-on-github.textile
@@ -2,11 +2,11 @@
 layout: post
 title: 在Github创建博客
 description: 这是文章描述
-tag: [a,b,c]
+categories: [category, develop, abc]
+tags: [a, b, c]
 ---
 
-h1. {{ page.title }}
-
-h2. 说明
-
-* *博客模板来自Bindiry's Wiki｜http://wiki.junnan.org*
+<header class="jumbotron subhead" id="overview">
+  <h1>Archive</h1>
+  <p class="lead">日志归档</p>
+</header>
